# HPC-exercise

./: .gitignore  2026-06-20.md  2026-06-23.md  2026-06-24.md  HPC_numeric_results.xlsx  README.md  ai-feed.md  exercise_1.md  exercise_2.md  matrix_multiplication.py  project_structure.md
PUBLIC/: exercise_1 - official.md  exercise_1.md  exercise_notes.md  orfeo_how_to.md  orfeo_notes.md
exercise1/: ex1-ai-report.md  ex1_execution_log.md  ex1_todo.md
exercise1/plots/: _temp_plots.txt
exercise1/report/: _temp_report.txt
exercise1/results/: _temp_results.txt  barrierEPYC.csv  barrierTHIN.csv  bcastEPYC.csv  bcastTHIN.csv
exercise1/scripts/: barrier_latencies.sh  barrier_latencies_alg01.sh  barrier_latencies_alg24.sh  barrier_thin.sh  bcast_latencies.sh  bcast_thin.sh  make.sh  plot_ex1.py
exercise2/: ex2_execution_log.md
exercise2/apps/: CMakeLists.txt  main.c
exercise2/plots/: mandelbrot_set.pgm  tree_plots.txt
exercise2/report/: _temp_report.txt
exercise2/results/: strong_scaling_OMP_EPYC.csv  tree_results.txt  weak_scaling_OMP_EPYC.csv
exercise2/scripts/: make.sh  pgm_to_png.py  plot_scaling.py  render_spot.sh  smoke_test.sh  strong_scaling_MPI_EPYC.sh  strong_scaling_OMP_EPYC.sh  sync_results_from_orfeo.sh  weak_scaling_MPI_EPYC.sh  weak_scaling_OMP_EPYC.sh
exercise2/src/: mandelbrot.c
exercise_1/: ex_1 notes.md  matrix_multiplication.py  matrix_multiplication_benchmark.py
exercise_1/results/: test_mat  (+1 more)
public_notes/: orfeo_how_to.md
report and slides/: HPC Presentation.pptx
scripts/: analyze_ex1_selection.py  build_results_xlsx.py
(+2 files in other folders)
